clusters/oci-kube/kube-prometheus-stack/grafana.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-prometheus-stack
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
