clusters/oci-kube/kube-prometheus-stack/nodeport-grafana.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-grafana
  namespace: kube-prometheus-stack
spec:
  type: NodePort
  ports:
  - name: http-web
    port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30180
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
