clusters/oci-kube/kube-prometheus-stack/prometheus.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kube-prometheus-stack
spec:
  type: NodePort
  ports:
  - name: http-web
    port: 9090
    nodePort: 30090
    protocol: TCP
    targetPort: 9090
  - appProtocol: http
    name: reloader-web
    port: 8080
    nodePort: 30080
    protocol: TCP
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kube-prometheus-stack-prometheus
