clusters/oci-kube/kube-prometheus-stack/ts-prometheus.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-prometheus
  namespace: kube-prometheus-stack
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: kube-prometheus-stack-prometheus
