clusters/oci-kube/kube-prometheus-stack/grafana.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-prometheus-stack
spec:
  ingressClassName: tailscale
  rules:
  - host: grafana
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              name: http-web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana
